--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
@@ -18,6 +19,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   }
