--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.7",
@@ -26,6 +27,7 @@
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
+    "react-async-component": "^2.0.0",
     "react-dom": "^16.8.1"
   }
 }
