--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-walkthrough",
+  "name": "webpack-basics",
   "version": "1.0.0",
   "description": "Webpack Walkthrough",
   "main": "index.js",
@@ -29,5 +29,13 @@
     "react": "^16.8.1",
     "react-async-component": "^2.0.0",
     "react-dom": "^16.8.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jeffthebrink/webpack-basics.git"
+  },
+  "bugs": {
+    "url": "https://github.com/churchcommunitybuilder/webpack-basics/issues"
+  },
+  "homepage": "https://github.com/churchcommunitybuilder/webpack-basics#readme"
 }
